Check the turn to open the cash